platform-enterprise_versioned_docs/version-23.4/launch/advanced.mdx
---
title: "Advanced options"
description: "Advanced guide to launching Nextflow pipelines in Seqera Platform"
date: "21 Apr 2023"
tags: [advanced, launch]
---

You can modify the configuration and execution of a pipeline with advanced launch options.

## Nextflow config file

The **Nextflow config file** field allows you to add settings to the Nextflow configuration file.

:::note
Nextflow parameters defined in this field override the same parameters in your `nextflow.config` file.
:::

This text should follow the same syntax as the [Nextflow configuration file](https://www.nextflow.io/docs/latest/config.html#config-syntax).

For example, modify the **manifest** section to give the pipeline a name and description that will show up in the Seqera monitoring section:

```ini
    manifest {
        name = 'My_RNASeq_Pipeline'
        description = 'Generates RNASeq results using a test profile'
        mainScript = 'main.nf'
        defaultBranch = 'master'
    }
```

## Seqera Cloud config file

The **Seqera Cloud config file** field allows you to configure per-pipeline Seqera reporting behavior. Settings specified here override the same settings in the [`tower.yml`](../enterprise/configuration/overview.mdx) file for this execution. Use the `reports` key to specify report paths, titles, and MIME types:

```yml
reports:
  reports/multiqc/index.html:
    display: "MultiQC Reports"
    mimeType: "text/html"
```

## Pre and post-run scripts

You can run custom code either before or after the execution of the Nextflow script. These fields allow you to enter shell commands.

Pre-run scripts are executed in the nf-launch script prior to invoking Nextflow processes. Pre-run scripts are useful for:
- Specifying an alternate Nextflow version to use for the run. For example, use `export NXF_VER=24.04.2` to take advantage of [new Nextflow features](https://seqera.io/blog/nextflow-24.04-highlights/) before a Platform version is released with 24.04.2 as its baseline. 
- Executor setup, such as loading a private CA certificate.
- Troubleshooting. For example, add `sleep 3600` to your pre-run script to instruct Nextflow to wait 3600 seconds (60 minutes) before process execution after the nf-launcher container is started, to create a window in which to test connectivity and other issues before your Nextflow processes execute.

Post-run scripts are executed after all Nextflow processes have completed. Post-run scripts are useful for triggering a third party service via API request.

## Pull latest

Enable this option to ensure that Nextflow pulls the latest version from the Git repository. This is equivalent to using the `-latest` flag.

## Main script

Nextflow will attempt to run the script named `main.nf` in the project repository by default. You can configure a custom script filename in `manifest.mainScript` or you can provide the script filename in this field.

:::note
If you specify a custom script filename, the root of the default branch in your pipeline repository must still contain blank `main.nf` and `nextflow.config` files. See [Nextflow configuration](../faqs.mdx#nextflow-configuration) for more information on this known Nextflow behavior.
:::

## Workflow entry name

Nextflow DSL2 provides the ability to launch workflows with specific names. Enter the name of the workflow to be executed in this field.
